Make header and footer no longer sticky
By resizing the browser viewpoint and reducing the height under a certain
threshold, the header and the footer start to overlap with the content.

Instead of using sticky headers and footers we'll extend the content container
to be at least as high as the viewport for wide screens and place the header
and footer absolute in there.

--- a/bluemix_promocodes/static/style.css
+++ b/bluemix_promocodes/static/style.css
@@ -38,6 +38,7 @@ body {
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
+  position: relative;
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
@@ -135,11 +136,11 @@ body {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
+    position: absolute;
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: absolute;
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -151,6 +152,12 @@ body {
   .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+
+  .cover-container {
+    min-height: 100%;
+    padding-top: 90px;
+    padding-bottom: 90px;
   }
 }
 
